Fixed several FindBugs issues in the ontologies package.